New: Add 'start quiz' button

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
 <div style="text-align:center">
   <h1>
-    Quiz
+    Quiz App
   </h1>
-  <button-component></button-component>
+  <app-start-button (start)="startQuiz($event)"></app-start-button>
 </div>
 
 <router-outlet></router-outlet>
